dont serve matlab notebook from ipython notebooks url

--- a/_posts/tutorials/aircraft_pitch.ipynb
+++ b/_posts/tutorials/aircraft_pitch.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Aircraft Pitch: Frequency Domain Methods for Controller Design</h1>\n",
+    "<h2>Aircraft Pitch</h2>\n",
+    "\n",
+    "<h3>Frequency Domain Methods for Controller Design</h3>\n",
     "\n",
     "Key MATLAB commands used in this tutorial are: <a href =\"http://www.mathworks.com/help/control/ref/tf.html\" class = 'nounderline'>tf</a> , <a href = \"http://www.mathworks.com/help/control/ref/step.html\" class = 'nounderline'>step</a> , <a href = \"http://www.mathworks.com/help/control/ref/feedback.html\" class = 'nounderline'>feedback</a> , <a href = \"http://www.mathworks.com/help/control/ref/pole.html\" class = 'nounderline'>pole</a> , <a href = \"http://www.mathworks.com/help/control/ref/margin.html\" class = 'nounderline'>margin</a> , <a href = \"http://www.mathworks.com/help/control/ref/stepinfo.html\" class = 'nounderline'>stepinfo</a>\n",
     "\n",
     "Original content from <a href=\"http://ctms.engin.umich.edu/CTMS/index.php?example=AircraftPitch&section=ControlFrequency\">University of Michigan </a>\n",
     "\n",
     "<br>\n",
-    "<h2> Contents </h2>\n",
+    "<h4> Contents </h4>\n",
     "\n",
     "- <a href = \"#olr\" class = 'nounderline'>Open-loop response</a>\n",
     "\n",
@@ -879,7 +881,8 @@
     "publisher.publish(\n",
     "    'aircraft_pitch.ipynb', '/matlab/aircraft-pitch-analysis-matlab-plotly',\n",
     "    'Aircraft Pitch Analysis in MATLAB and Plotly', \n",
-    "    'MATLAB and Plotly analysis of aircraft pitch. Frequency domain methods for controller design.')"
+    "    'MATLAB and Plotly analysis of aircraft pitch. Frequency domain methods for controller design.',\n",
+    "    redirect_from='/ipython-notebooks/aircraft-pitch-analysis-matlab-plotly/')"
    ]
   },
   {
