--- a/_posts/tutorials/bicycle_control.ipynb
+++ b/_posts/tutorials/bicycle_control.ipynb
@@ -1762,8 +1762,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### About the author\n",
+    "Jason K. Moore is a postdoctoral researcher at the Cleveland State University [Human Motion & Control Lab](http://hmc.csuohio.edu/) where he works on identification of human walking control strategies for use in powered prosthetic control design. He loves bicycles, so much so that he wrote a [dissertation](http://moorepants.github.io/dissertation/) on the topic. You can find out more about him on his website: [moorepants.info](http://moorepants.info)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1797,14 +1805,6 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
