--- a/_posts/python/finance/candlestick-charts.ipynb
+++ b/_posts/python/finance/candlestick-charts.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -414,6 +414,16 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
