--- a/_posts/user_guide_python/pdf-reports.ipynb
+++ b/_posts/user_guide_python/pdf-reports.ipynb
@@ -276,6 +276,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Generating Images *on the fly*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The static report in the example above uses graphs that were already created in Plotly. Sometimes it's helpful to use graph images that are created on-the-fly. For example, if you're using [plotly.js](https://plot.ly/javascript-graphing-library) to create the web-reports you might not be saving the graphs to accounts on [plot.ly](https://plot.ly).\n",
     "\n",
     "To create static images of graphs on-the-fly, use the `plotly.plotly.image` class. This class generates images by making a request to the Plotly image server.\n",
@@ -362,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages\r\n"
+      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher-0.8-py2.7.egg\r\n"
      ]
     },
     {
@@ -397,6 +404,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher-0.8-py2.7.egg/publisher/publisher.py:50: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n"
+     ]
     }
    ],
    "source": [
