--- a/_posts/python/finance/candlestick-charts.ipynb
+++ b/_posts/python/finance/candlestick-charts.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -413,7 +413,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages\r\n"
+      "\u001b[33mYou are using pip version 7.0.3, however version 7.1.0 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Collecting publisher\n",
+      "  Downloading publisher-0.8.tar.gz\n",
+      "Installing collected packages: publisher\n",
+      "  Running setup.py install for publisher\n",
+      "Successfully installed publisher-0.8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/anaconda/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
