--- a/_posts/python/finance/ohlc-charts.ipynb
+++ b/_posts/python/finance/ohlc-charts.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.8.0'"
+       "'1.7.9'"
       ]
      },
      "execution_count": 1,
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -420,7 +420,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages\r\n"
+      "\u001b[33mYou are using pip version 7.0.3, however version 7.1.0 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already up-to-date: publisher in /Users/Chelsea/anaconda/lib/python2.7/site-packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/anaconda/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
