--- a/_posts/user_guide_python/pdf-reports.ipynb
+++ b/_posts/user_guide_python/pdf-reports.ipynb
@@ -243,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:xhtml2pdf:Created temporary file /var/folders/d4/c4jpnb754pj3cfj5pv8y9m080000gn/T/tmpSlye2b\n"
+      "WARNING:xhtml2pdf:Created temporary file /var/folders/d4/c4jpnb754pj3cfj5pv8y9m080000gn/T/tmp1ttqTi\n"
      ]
     },
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
     "]\n",
     "\n",
     "# Generate their images using `py.image.get`\n",
-    "images = [base64.b64encode(py.image.get(figure, width=width, height=height)) for figure in figures]\n",
+    "images = [base64.b64encode(py.image.get(figure, width=width, height=height)).decode('utf-8') for figure in figures]\n",
     "\n",
     "report_html = ''\n",
     "for image in images:\n",
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages\r\n"
+      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher-0.8-py2.7.egg\r\n"
      ]
     },
     {
@@ -397,6 +397,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher-0.8-py2.7.egg/publisher/publisher.py:50: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
