new ggplotly call signature. and the most tedious white space clean up

--- a/_posts/tutorials/collaborate.ipynb
+++ b/_posts/tutorials/collaborate.ipynb
@@ -281,14 +281,14 @@
     "+     xlab('Year') + ylab('GDI per capita (Atlas Method USD)') \n",
     "+     labs(title <- \"GNI Per Capita ($USD Atlas Method)\")\n",
     "\n",
-    "py$ggplotly(wb)"
+    "ggplotly(wb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can add `py$ggplotly` to the call, which will draw the figure with Plotly's [R API](https://plot.ly/r). Then we can call it in a Notebook. You can similarly call any Plotly graph with the username and graph id pair."
+    "We can add `ggplotly` to the call, which will draw the figure with Plotly's [R API](https://plot.ly/r). Then we can call it in a Notebook. You can similarly call any Plotly graph with the username and graph id pair."
    ]
   },
   {
