--- a/_posts/tutorials/survival_analysis.ipynb
+++ b/_posts/tutorials/survival_analysis.ipynb
@@ -1063,7 +1063,7 @@
     }
    ],
    "source": [
-    "#%R py$ggplotly(plt)\n",
+    "#%R ggplotly(plt)\n",
     "\n",
     "%R p <- plot.ly(\"https://plot.ly/~rmdk/173/lifespans-of-different-tumor-dna-profile/\")\n",
     "# pass object to python kernel\n",
