set.seed and simpler getting started

--- a/_posts/2015-07-30-r-index.Rmd
+++ b/_posts/2015-07-30-r-index.Rmd
@@ -20,12 +20,9 @@ Sys.setenv("plotly_username"="RPlotBot")
 Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 
-```r
-devtools::install_github("ropensci/plotly")
-```
-
 ```{r, message=FALSE}
 library(plotly)
+set.seed(100)
 d <- diamonds[sample(nrow(diamonds), 1000), ]
 plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
         mode = "markers", color = carat, size = carat, opacity = carat)
@@ -34,18 +31,13 @@ plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
 
 #### Know and love `ggplot2`? Try `ggplotly`
 
-```r
-library(plotly)
-d <- diamonds[sample(nrow(diamonds), 1000), ]
+```{r, message=FALSE}
 p <- ggplot(data = d, aes(x = carat, y = price)) +
   geom_point(aes(text = paste("Clarity:", clarity)), size = 4) +
   geom_smooth(aes(colour = cut, fill = cut)) + facet_wrap(~ cut)
 
 (gg <- ggplotly(p))
 ```
-
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/913.embed" width="800" frameBorder="0"></iframe>
-
 
 
 #### Mix data manipulation and visualization verbs
