--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -16,25 +16,21 @@ language: r
 
 
 
-```r
-devtools::install_github("ropensci/plotly")
-```
-
 
 ```r
 library(plotly)
+set.seed(100)
 d <- diamonds[sample(nrow(diamonds), 1000), ]
 plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
         mode = "markers", color = carat, size = carat, opacity = carat)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1043.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1117.embed" width="800" frameBorder="0"></iframe>
 
 #### Know and love `ggplot2`? Try `ggplotly`
 
+
 ```r
-library(plotly)
-d <- diamonds[sample(nrow(diamonds), 1000), ]
 p <- ggplot(data = d, aes(x = carat, y = price)) +
   geom_point(aes(text = paste("Clarity:", clarity)), size = 4) +
   geom_smooth(aes(colour = cut, fill = cut)) + facet_wrap(~ cut)
@@ -42,8 +38,7 @@ p <- ggplot(data = d, aes(x = carat, y = price)) +
 (gg <- ggplotly(p))
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/913.embed" width="800" frameBorder="0"></iframe>
-
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1119.embed" width="800" frameBorder="0"></iframe>
 
 
 #### Mix data manipulation and visualization verbs
@@ -63,7 +58,7 @@ str(p <- plot_ly(economics, x = date, y = uempmed))
 ##  $ psavert : num  9.8 9.8 9 9.8 9.7 9.4 9 9.5 8.9 9.6 ...
 ##  $ uempmed : num  4.5 4.7 4.6 4.9 4.7 4.8 5.1 4.5 4.1 4.6 ...
 ##  $ unemploy: int  2944 2945 2958 3143 3066 3018 2878 3001 2877 2709 ...
-##  - attr(*, "plotly_hash")= chr "7ff330ec8c566561765c62cbafed3e0f#1"
+##  - attr(*, "plotly_hash")= chr "7ff330ec8c566561765c62cbafed3e0f#2"
 ```
 
 This allows us to mix data manipulation and visualization verbs in a [pure(ly) functional, predictable and pipeable](https://dl.dropboxusercontent.com/u/41902/pipe-dsls.pdf) manner. Here, we take advantage of [dplyr](http://cran.r-project.org/web/packages/dplyr/index.html)'s `filter()` verb to label the highest peak in the time series:
@@ -78,7 +73,7 @@ p %>%
   layout(annotations = list(x = date, y = uempmed, text = "Peak", showarrow = T))
 ```
 
-<iframe height="650" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1045.embed" width="800" frameBorder="0"></iframe>
+<iframe height="650" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1121.embed" width="800" frameBorder="0"></iframe>
 
 #### 3D WebGL and more
 
@@ -89,7 +84,7 @@ Although data frames can be thought of as the central object in this package, pl
 plot_ly(z = volcano, type = "surface")
 ```
 
-<iframe height="800" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1047.embed" width="800" frameBorder="0"></iframe>
+<iframe height="800" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1123.embed" width="800" frameBorder="0"></iframe>
 
 {% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","r"  | where:"has_thumbnail",true | sort: "order"  %}
 {% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","r" %}
