plotly graphs are interactive.

--- a/_posts/2015-07-30-r-index.Rmd
+++ b/_posts/2015-07-30-r-index.Rmd
@@ -28,6 +28,8 @@ plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
         mode = "markers", color = carat, size = carat, opacity = carat)
 
 ```
+Plotly graphs are interactive. Click-drag to zoom, shift-click to pan, double-click to autoscale.
+
 
 #### Know and love `ggplot2`? Try `ggplotly`
 
