--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -25,7 +25,9 @@ plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
         mode = "markers", color = carat, size = carat, opacity = carat)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1117.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1135.embed" width="800" frameBorder="0"></iframe>
+Plotly graphs are interactive. Click-drag to zoom, shift-click to pan, double-click to autoscale.
+
 
 #### Know and love `ggplot2`? Try `ggplotly`
 
@@ -38,7 +40,7 @@ p <- ggplot(data = d, aes(x = carat, y = price)) +
 (gg <- ggplotly(p))
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1119.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1137.embed" width="800" frameBorder="0"></iframe>
 
 
 #### Mix data manipulation and visualization verbs
@@ -73,7 +75,7 @@ p %>%
   layout(annotations = list(x = date, y = uempmed, text = "Peak", showarrow = T))
 ```
 
-<iframe height="650" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1121.embed" width="800" frameBorder="0"></iframe>
+<iframe height="650" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1139.embed" width="800" frameBorder="0"></iframe>
 
 #### 3D WebGL and more
 
@@ -84,7 +86,7 @@ Although data frames can be thought of as the central object in this package, pl
 plot_ly(z = volcano, type = "surface")
 ```
 
-<iframe height="800" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1123.embed" width="800" frameBorder="0"></iframe>
+<iframe height="800" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1141.embed" width="800" frameBorder="0"></iframe>
 
 {% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","r"  | where:"has_thumbnail",true | sort: "order"  %}
 {% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","r" %}
