remove opacity from first example since it isn't mapped yet

--- a/_posts/2015-07-30-r-index.Rmd
+++ b/_posts/2015-07-30-r-index.Rmd
@@ -25,7 +25,7 @@ library(plotly)
 set.seed(100)
 d <- diamonds[sample(nrow(diamonds), 1000), ]
 plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
-        mode = "markers", color = carat, size = carat, opacity = carat)
+        mode = "markers", color = carat, size = carat)
 
 ```
 Plotly graphs are interactive. Click-drag to zoom, shift-click to pan, double-click to autoscale.
