--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -22,10 +22,10 @@ library(plotly)
 set.seed(100)
 d <- diamonds[sample(nrow(diamonds), 1000), ]
 plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
-        mode = "markers", color = carat, size = carat, opacity = carat)
+        mode = "markers", color = carat, size = carat)
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1135.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1143.embed" width="800" frameBorder="0"></iframe>
 Plotly graphs are interactive. Click-drag to zoom, shift-click to pan, double-click to autoscale.
 
 
@@ -40,7 +40,7 @@ p <- ggplot(data = d, aes(x = carat, y = price)) +
 (gg <- ggplotly(p))
 ```
 
-<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1137.embed" width="800" frameBorder="0"></iframe>
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1145.embed" width="800" frameBorder="0"></iframe>
 
 
 #### Mix data manipulation and visualization verbs
@@ -75,7 +75,7 @@ p %>%
   layout(annotations = list(x = date, y = uempmed, text = "Peak", showarrow = T))
 ```
 
-<iframe height="650" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1139.embed" width="800" frameBorder="0"></iframe>
+<iframe height="650" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1147.embed" width="800" frameBorder="0"></iframe>
 
 #### 3D WebGL and more
 
@@ -86,7 +86,7 @@ Although data frames can be thought of as the central object in this package, pl
 plot_ly(z = volcano, type = "surface")
 ```
 
-<iframe height="800" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1141.embed" width="800" frameBorder="0"></iframe>
+<iframe height="800" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1149.embed" width="800" frameBorder="0"></iframe>
 
 {% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","r"  | where:"has_thumbnail",true | sort: "order"  %}
 {% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","r" %}
