another attempt to get shiny iframe to render

--- a/_posts/r/2015-07-30-shiny.Rmd
+++ b/_posts/r/2015-07-30-shiny.Rmd
@@ -16,7 +16,9 @@ display_as: get_request
 Plotly works with Shiny entirely *client-side* either through [plotly.js](https://plot.ly/javascript-graphing-library) or with Plotly's [postMessage API](https://github.com/plotly/postMessage-API). This means that updating the Plotly graphs is *fast* because no external calls are made to a Plotly server. You can export Plotly graphs to your account by clicking the <code>Edit chart</code> link on the bottom right of the chart.
 
 
-<iframe src="https://plotly.shinyapps.io/Movies" width="100%" height=700 seamless style="border: none"></iframe>
+
+<iframe src="https://plotly.shinyapps.io/Movies" width="100%" height=700 scrolling="no" seamless="seamless" style="border: none"></iframe>
+
 
 
 ### `ui.R`
