--- a/_posts/r/2015-07-30-shiny.Rmd
+++ b/_posts/r/2015-07-30-shiny.Rmd
@@ -1,7 +1,11 @@
 ---
-title: R Getting Started with Shiny and Plotly | Examples | Plotly
+title: Getting Started with Shiny and Plotly | Examples | Plotly
 name: Getting Started with Shiny and Plotly
 permalink: r/shiny-tutorial/
+redirect_from:
+  - ggplot2/shiny-tutorial
+  - r/shiny
+  - ggplot2/shiny
 description: Getting Started with Shiny and Plotly
 layout: base
 thumbnail: /images/shiny-r.png
