--- a/_posts/r/2015-07-30-shiny.md
+++ b/_posts/r/2015-07-30-shiny.md
@@ -1,7 +1,11 @@
 ---
-title: R Getting Started with Shiny and Plotly | Examples | Plotly
+title: Getting Started with Shiny and Plotly | Examples | Plotly
 name: Getting Started with Shiny and Plotly
 permalink: r/shiny-tutorial/
+redirect_from:
+  - ggplot2/shiny-tutorial
+  - r/shiny
+  - ggplot2/shiny
 description: Getting Started with Shiny and Plotly
 layout: base
 thumbnail: /images/shiny-r.png
@@ -21,7 +25,9 @@ Plotly works with Shiny entirely *client-side* either through [plotly.js](https:
 
 
 
-### `ui.R`
+### Example 1 - Plotly's Native Syntax
+
+#### `ui.R`
 ```
 
 library(shiny)
@@ -38,7 +44,7 @@ shinyUI(fluidPage(
 ))
 ```
 
-### `server.R`
+#### `server.R`
 ```R
 library(shiny)
 library(plotly)
@@ -59,6 +65,48 @@ shinyServer(function(input, output) {
     # style the xaxis
     layout(p, xaxis = list(title = "Ratings", range = c(minx, maxx), autorange = F,
                            autotick = F, tick0 = minx, dtick = size))
+  })
+})
+```
+
+### Example 2 - Render `ggplotly`
+
+#### `ui.R`
+```R
+library(shiny)
+library(plotly)
+
+shinyUI(fluidPage(
+  titlePanel("Movie Ratings!"),
+  sidebarPanel(
+    sliderInput("bins", "Number of bins:", min = 1, max = 50, value = 10)
+  ),
+  mainPanel(
+    plotlyOutput("trendPlot")
+  )
+))
+```
+
+#### `server.R`
+```R
+library(shiny)
+library(plotly)
+
+data(movies, package = "ggplot2")
+minx <- min(movies$rating)
+maxx <- max(movies$rating)
+
+shinyServer(function(input, output) {
+
+  output$trendPlot <- renderPlotly({
+    # size of the bins depend on the input 'bins'
+    size <- (maxx - minx) / input$bins
+
+    gg <- ggplot(movies, aes(x=rating)) +
+                 geom_histogram(aes(y = ..density..), binwidth=size)
+    # Convert the ggplot to a plotly
+    p <- ggplotly(gg)
+    p
   })
 })
 ```
