--- a/_posts/2015-07-30-r-index.Rmd
+++ b/_posts/2015-07-30-r-index.Rmd
@@ -11,6 +11,7 @@ language: r
 	<a href="/r/getting-started/" class="button no_underline">Getting Started</a>
 	<a href="/r/user-guide/" class="button no_underline">User Guide</a>
 	<a href="https://plot.ly/r/reference/" class="button no_underline">Figure Reference</a>
+  <a href="https://plot.ly/r/shiny-tutorial/" class="button no_underline">Shiny</a>
 </div>
 
 
