--- a/_posts/r/2015-07-30-getting-started.Rmd
+++ b/_posts/r/2015-07-30-getting-started.Rmd
@@ -51,6 +51,8 @@ Sys.setenv("plotly_username"="your_plotly_username")
 Sys.setenv("plotly_api_key"="your_api_key")
 ```
 
+Save these commands in your [.Rprofile](http://www.statmethods.net/interface/customizing.html) file to be run everytime you start R.
+
 #### Special Instructions for Plotly On-Premise Users
 
 Your API key for account on the public cloud will be different than the API key in [Plotly On-Premise](https://plot.ly/product/enterprise/). Visit https://plotly.your-company.com/settings/api/ to find your Plotly On-Premise API key. Remember to replace "your-company.com" with the URL of your Plotly On-Premise server.
