--- a/_posts/r/2015-07-30-getting-started.Rmd
+++ b/_posts/r/2015-07-30-getting-started.Rmd
@@ -16,7 +16,7 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 # Plotly for R
 
-Plotly is R package for creating interactive web-based graphs via [plotly](https://plot.ly/)'s JavaScript graphing library.
+Plotly is R package for creating interactive web-based graphs via [plotly](https://plot.ly/)'s JavaScript graphing library, `plotly.js`.
 
 <a href="https://travis-ci.org/ropensci/plotly">
     <img alt="Build Status" style="margin: 0;" src="https://travis-ci.org/ropensci/plotly.png?branch=master">
@@ -27,13 +27,14 @@ Plotly is R package for creating interactive web-based graphs via [plotly](https
 __plotly__ is not (yet) available on CRAN, but you can install it via [devtools](http://cran.r-project.org/web/packages/devtools/):
 
 ```r
+install.package("devtools")
 devtools::install_github("ropensci/plotly")
 ```
 
 
 #### Signup
 
-If you don't already have a plotly account, either [signup online](https://plot.ly/how-to-sign-up-to-plotly/) or use the `signup()` function (see the `help(signup)` page for more details).
+If you don't already have a plotly account, either [signup online](https://plot.ly/ssu/) or use the `signup()` function (see the `help(signup)` page for more details).
 
 Note you can check if you have a username and API key with:
 
