fix getting started

--- a/_posts/ggplot2/getting-started/2015-08-10-getting-started_ggplot2_index.Rmd
+++ b/_posts/ggplot2/getting-started/2015-08-10-getting-started_ggplot2_index.Rmd
@@ -73,6 +73,11 @@ Remember to replace "your-company" with the URL of your Plotly On-Premise server
 #### Converting `ggplot` figures into Plotly graphs
 
 ```{r, message=FALSE}
+library(plotly)
+
+set.seed(100)
+d <- diamonds[sample(nrow(diamonds), 1000), ]
+
 p <- ggplot(data = d, aes(x = carat, y = price)) +
   geom_point(aes(text = paste("Clarity:", clarity)), size = 4) +
   geom_smooth(aes(colour = cut, fill = cut)) + facet_wrap(~ cut)
