--- a/_posts/user_guide_matlab/Plotly Offline.ipynb
+++ b/_posts/user_guide_matlab/Plotly Offline.ipynb
@@ -145,12 +145,55 @@
     "[X,Y,Z] = peaks(25);\n",
     "figure\n",
     "surf(X,Y,Z);\n",
-    "fig2plotly()"
+    "plotly_fig = fig2plotly(gcf, 'offline', true, 'filename', 'peaks');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating offline figures with Plotly's native syntax\n",
+    "\n",
+    "Describing figure's using Plotly's native syntax is a more cumbersome but powerful and flexible way to create Plotly figures. View more examples at the bottom of each example page on [plotly's online MATLAB documentation](https://plot.ly/matlab).\n",
+    "\n",
+    "```MATLAB\n",
+    "%% Describe your figure: data and layout. \n",
+    "% view more examples at the bottom of each example page: https://plot.ly/matlab\n",
+    "\n",
+    "trace1 = struct(...\n",
+    "  'x', [1, 2, 3, 4], ...\n",
+    "  'y', [10, 15, 13, 17], ...\n",
+    "  'type', 'scatter');\n",
+    "trace2 = struct(...\n",
+    "  'x', [1, 2, 3, 4], ...\n",
+    "  'y', [16, 5, 11, 9], ...\n",
+    "  'type', 'scatter');\n",
+    "data = {trace1, trace2};\n",
+    "\n",
+    "layout = struct()\n",
+    "layout.title = 'basic offline figure';\n",
+    "layout.width = 800; % required\n",
+    "layout.height = 650; % required\n",
+    "\n",
+    "p = plotlyfigure; % initalize an empty figure object\n",
+    "p.data = data;\n",
+    "p.layout = layout;\n",
+    "\n",
+    "p.PlotOptions.FileName = 'basic-offline'\n",
+    "\n",
+    "% Create a standalone HTML file\n",
+    "html_file = plotlyoffline(p);\n",
+    "\n",
+    "% open it in your web browser\n",
+    "web html_file -browser\n",
+    "```\n",
+    "\n",
+    "![self-hosted matlab online](http://i.imgur.com/3ECfrwG.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
