yikes - fix that meta description

--- a/_posts/r/2015-07-30-subplots.Rmd
+++ b/_posts/r/2015-07-30-subplots.Rmd
@@ -2,7 +2,7 @@
 title: Subplots in R | Plotly
 name: Subplots
 permalink: r/subplots/
-description: How to make a subplot small multiple graph in R with Plotly.
+description: How to graph subplots and small multiples in R with Plotly.
 layout: base
 thumbnail: /images/subplots.png
 language: r
