change urls from /javascript-graphig-library/ to /javascript/

--- a/_posts/r/2015-07-30-subplots.Rmd
+++ b/_posts/r/2015-07-30-subplots.Rmd
@@ -83,7 +83,7 @@ layout(
 )
 ```
 
-If you are familar with [plotly.js](https://plot.ly/javascript-graphing-library), you might notice that `subplot` is generating axis objects with the appropriate anchor and domain properties. If you are interested, [view how subplots are created in plotly.js](https://plot.ly/javascript-graphing-library/subplots) or [view the JSON representation of this graph](https://plot.ly/~RplotBot/1408.json).
+If you are familar with [plotly.js](https://plot.ly/javascript), you might notice that `subplot` is generating axis objects with the appropriate anchor and domain properties. If you are interested, [view how subplots are created in plotly.js](https://plot.ly/javascript/subplots) or [view the JSON representation of this graph](https://plot.ly/~RplotBot/1408.json).
 
 Since `subplot()` does not assume x/y axes are on a common scale, it does not impose any restrictions on the range by default. However, you can change this by pre-specifying the range of the [axis objects](https://plot.ly/r/reference/#xaxis) via the `layout()` function.
 
