--- a/_posts/r/2015-07-30-shiny.Rmd
+++ b/_posts/r/2015-07-30-shiny.Rmd
@@ -17,7 +17,7 @@ display_as: get_request
 
 # Plotly Graphs in Shiny
 
-Plotly works with Shiny entirely *client-side* either through [plotly.js](https://plot.ly/javascript-graphing-library) or with Plotly's [postMessage API](https://github.com/plotly/postMessage-API). This means that updating the Plotly graphs is *fast* because no external calls are made to a Plotly server. You can export Plotly graphs to your account by clicking the <code>Edit chart</code> link on the bottom right of the chart.
+Plotly works with Shiny entirely *client-side* either through [plotly.js](https://plot.ly/javascript) or with Plotly's [postMessage API](https://github.com/plotly/postMessage-API). This means that updating the Plotly graphs is *fast* because no external calls are made to a Plotly server. You can export Plotly graphs to your account by clicking the <code>Edit chart</code> link on the bottom right of the chart.
 
 
 
