--- a/_posts/2015-07-30-r-index.Rmd
+++ b/_posts/2015-07-30-r-index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R Graphing Library | Plotly"
+title: R Graphing Library | Plotly
 permalink: r/
 description: Plotly's R graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
