script to remove extra quoties

--- a/scripts/update-front-matter.ipynb
+++ b/scripts/update-front-matter.ipynb
@@ -83,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def rewrite_js_urls(fn):\n",
+    "def process_posts(fn):\n",
     "    try:\n",
     "        p = Post(fn)\n",
     "    except NotPost:\n",
@@ -98,23 +98,20 @@
     "        print fn\n",
     "        raise e\n",
     "    else:\n",
-    "        if (p.fm_vars.get('language', '') == 'plotly_js' and \n",
-    "            'blahblahblah' in p.fm_vars.get('redirect_from', '')):\n",
-    "            # p.fm_vars['redirect_from'] = p.fm_vars['redirect_from'].replace('javascript-graphing-library', 'blahblahblah')\n",
-    "            p.fm_vars['redirect_from'] = p.fm_vars['redirect_from'].replace('blahblahblah', 'javascript-graphing-library')\n",
-    "            #p.fm_vars['permalink'] = p.fm_vars['permalink'].replace('blahblahblah', 'javascript-graphing-library')\n",
+    "        if 'title' in p.fm_vars:\n",
+    "            p.fm_vars['title'] = p.fm_vars['title'].replace('\"', '')\n",
     "            p.save()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "walknroll(rewrite_js_urls)"
+    "walknroll(process_posts)"
    ]
   },
   {
