--- a/scripts/update-front-matter.ipynb
+++ b/scripts/update-front-matter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -98,14 +98,15 @@
     "        print fn\n",
     "        raise e\n",
     "    else:\n",
-    "        if 'title' in p.fm_vars:\n",
-    "            p.fm_vars['title'] = p.fm_vars['title'].replace('\"', '')\n",
-    "            p.save()"
+    "        if 'description' in p.fm_vars:\n",
+    "            if 'href' not in p.fm_vars['description'] and '\"' in p.fm_vars:\n",
+    "                p.fm_vars['description'] = p.fm_vars['description'].replace('\"', '')\n",
+    "                p.save()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
