add cufflinks examples to pandas finance charts

--- a/_posts/pandas/finance/candlestick-charts.ipynb
+++ b/_posts/pandas/finance/candlestick-charts.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.7.9'"
+       "'1.8.3'"
       ]
      },
      "execution_count": 1,
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~PlotBot/545.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5576.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -87,7 +87,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~PlotBot/547.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5634.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -141,7 +141,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~PlotBot/549.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5578.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -201,7 +201,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~PlotBot/551.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5642.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -240,12 +240,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reference"
+    "### Candlestick Charts in Cufflinks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-01-01 00:00:00+00:00</th>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>128.173653</td>\n",
+       "      <td>98.588572</td>\n",
+       "      <td>120.833993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-02 00:00:00+00:00</th>\n",
+       "      <td>120.832517</td>\n",
+       "      <td>141.435815</td>\n",
+       "      <td>116.499927</td>\n",
+       "      <td>128.507242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-03 00:00:00+00:00</th>\n",
+       "      <td>128.157684</td>\n",
+       "      <td>132.879651</td>\n",
+       "      <td>110.300881</td>\n",
+       "      <td>125.013661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-04 00:00:00+00:00</th>\n",
+       "      <td>124.570863</td>\n",
+       "      <td>147.303230</td>\n",
+       "      <td>121.719895</td>\n",
+       "      <td>137.703137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-05 00:00:00+00:00</th>\n",
+       "      <td>137.431537</td>\n",
+       "      <td>148.190115</td>\n",
+       "      <td>127.405697</td>\n",
+       "      <td>134.018613</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 open        high         low       close\n",
+       "2015-01-01 00:00:00+00:00  100.000000  128.173653   98.588572  120.833993\n",
+       "2015-01-02 00:00:00+00:00  120.832517  141.435815  116.499927  128.507242\n",
+       "2015-01-03 00:00:00+00:00  128.157684  132.879651  110.300881  125.013661\n",
+       "2015-01-04 00:00:00+00:00  124.570863  147.303230  121.719895  137.703137\n",
+       "2015-01-05 00:00:00+00:00  137.431537  148.190115  127.405697  134.018613"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cufflinks as cf\n",
+    "import pandas as pd\n",
+    "\n",
+    "cf.set_config_file(world_readable=True,offline=False)\n",
+    "\n",
+    "# Open, High, Low, Close Data Generation\n",
+    "ohlc=cf.datagen.ohlc()\n",
+    "ohlc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6060.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ohlc.head().iplot(kind='candle',theme='ggplot',up_color='blue',down_color='pink')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -323,15 +441,14 @@
       "    import pandas.io.data as web\n",
       "    \n",
       "    df = web.DataReader(\"aapl\", 'yahoo', datetime(2008, 1, 1), datetime(2009, 4, 1))\n",
-      "    fig = FF.create_candlestick(df.Open, df.High, df.Low, df.Close, dates=df.index)\n",
       "    \n",
-      "    # Make increasing ohlc sticks and customize their color and name\n",
+      "    # Make increasing candlesticks and customize their color and name\n",
       "    fig_increasing = FF.create_candlestick(df.Open, df.High, df.Low, df.Close, dates=df.index,\n",
       "        direction='increasing', name='AAPL',\n",
       "        marker=Marker(color='rgb(150, 200, 250)'),\n",
       "        line=Line(color='rgb(150, 200, 250)'))\n",
       "    \n",
-      "    # Make decreasing ohlc sticks and customize their color and name\n",
+      "    # Make decreasing candlesticks and customize their color and name\n",
       "    fig_decreasing = FF.create_candlestick(df.Open, df.High, df.Low, df.Close, dates=df.index,\n",
       "        direction='decreasing',\n",
       "        marker=Marker(color='rgb(128, 128, 128)'),\n",
@@ -380,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -413,30 +530,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 7.0.3, however version 7.1.0 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Collecting publisher\n",
-      "  Downloading publisher-0.8.tar.gz\n",
-      "Installing collected packages: publisher\n",
-      "  Running setup.py install for publisher\n",
-      "Successfully installed publisher-0.8\n"
+      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\r\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/anaconda/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
       "\n",
       "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
       "\n"
@@ -456,8 +557,8 @@
     "    'How to make interactive candlestick charts in Python with Plotly. '\n",
     "    'Six examples of candlestick charts with Pandas, time series, and yahoo finance data.',\n",
     "    title = 'Python Candlestick Charts | plotly',\n",
-    "    thumbnail='/images/candlestick.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=26)"
+    "    thumbnail='/images/candlestick.png', language='pandas',\n",
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=21)"
    ]
   },
   {
@@ -486,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
