set thumnail to true

--- a/_posts/pandas/finance/ohlc-charts.ipynb
+++ b/_posts/pandas/finance/ohlc-charts.ipynb
@@ -594,12 +594,12 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'ohlc-charts.ipynb', 'python/ohlc-charts', 'OHLC Charts',\n",
+    "    'ohlc-charts.ipynb', 'pandas/ohlc-charts', 'OHLC Charts',\n",
     "    'How to make interactive OHLC charts in Python with Plotly. '\n",
     "    'Six examples of OHLC charts with Pandas, time series, and yahoo finance data.',\n",
     "    title = 'Python OHLC Charts | plotly',\n",
-    "    thumbnail='/images/ohlc.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=27)    "
+    "    thumbnail='/images/ohlc.png', language='pandas',\n",
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=20)    "
    ]
   },
   {
