explain how to export knitr to html

--- a/_posts/r/2015-08-10-knitr.Rmd
+++ b/_posts/r/2015-08-10-knitr.Rmd
@@ -43,3 +43,10 @@ p
 ```
 
 If you are using [Plotly Offline with R Studio](https://purchasing.plot.ly/plotly-offline-r), then printing the plotly object in knitr will also include the necessary `plotly.js` files to draw the graph: the graph is rendered locally inside the document.
+
+To convert the knitr document to a standalone HTML file, use `knitr::knit` and `markdown::markdownToHTML`. For example:
+
+```
+knitr::knit('plotly-report.Rmd', 'plotly-report.md')
+markdown::markdownToHTML('plotly-report.md', 'plotly-report.html')
+```
