--- a/_posts/r/2015-08-10-knitr.md
+++ b/_posts/r/2015-08-10-knitr.md
@@ -46,3 +46,10 @@ p
 <iframe height="800" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1286.embed" width="800" frameBorder="0"></iframe>
 
 If you are using [Plotly Offline with R Studio](https://purchasing.plot.ly/plotly-offline-r), then printing the plotly object in knitr will also include the necessary `plotly.js` files to draw the graph: the graph is rendered locally inside the document.
+
+To convert the knitr document to a standalone HTML file, use `knitr::knit` and `markdown::markdownToHTML`. For example:
+
+```
+knitr::knit('plotly-report.Rmd', 'plotly-report.md')
+markdown::markdownToHTML('plotly-report.md', 'plotly-report.html')
+```
