--- a/_posts/pandas/pie/pie-charts.ipynb
+++ b/_posts/pandas/pie/pie-charts.ipynb
@@ -50,28 +50,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>GVP.PD</td>\n",
-       "      <td>27</td>\n",
+       "      <td>ZDS.FY</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NOR.NU</td>\n",
-       "      <td>2</td>\n",
+       "      <td>RPF.JV</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>RIF.GN</td>\n",
-       "      <td>41</td>\n",
+       "      <td>ACC.UM</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>LXH.BC</td>\n",
-       "      <td>90</td>\n",
+       "      <td>NCY.LC</td>\n",
+       "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>FHT.VE</td>\n",
-       "      <td>32</td>\n",
+       "      <td>EIK.JE</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -79,11 +79,11 @@
       ],
       "text/plain": [
        "   labels  values\n",
-       "0  GVP.PD      27\n",
-       "1  NOR.NU       2\n",
-       "2  RIF.GN      41\n",
-       "3  LXH.BC      90\n",
-       "4  FHT.VE      32"
+       "0  ZDS.FY      70\n",
+       "1  RPF.JV      20\n",
+       "2  ACC.UM      17\n",
+       "3  NCY.LC      76\n",
+       "4  EIK.JE      99"
       ]
      },
      "execution_count": 2,
@@ -115,7 +115,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6106.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6145.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6108.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6147.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -170,11 +170,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\r\n"
+     ]
+    }
+   ],
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
@@ -191,6 +223,15 @@
     "    thumbnail='/images/pie.png', language='pandas',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=22)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
