added xlwings for ipython NB

--- a/_posts/user_guide_python/xlwings.ipynb
+++ b/_posts/user_guide_python/xlwings.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ABOUT THE AUTHOR:"
+    "#### ABOUT THE AUTHOR:"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Building Interactive Graphs at the Push of an (Excel) Button Using Plot.ly and xlwings"
+    "#### Building Interactive Graphs at the Push of an (Excel) Button Using Plot.ly and xlwings"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In Short... How you can go from this:"
+    "###### In Short... How you can go from this:"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### To this:"
+    "###### To this:"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### *Why* we are working on this:"
+    "###### *Why* we are working on this:"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Covered in this notebook\n",
+    "###### Covered in this notebook\n",
     "* Connect to an excel workbook with XLWings\n",
     "* Clean and prepare your data with pandas\n",
     "* Plot with Plotly\n",
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
