added github for author

--- a/_posts/user_guide_python/xlwings.ipynb
+++ b/_posts/user_guide_python/xlwings.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook was contributed by plotly user Otto Stegmaier.  You can follow Otto on Twitter [@otto_stegmaier](https://twitter.com/otto_stegmaier?lang=en)"
+    "This notebook was contributed by [Plotly user Otto Stegmaier](https://plot.ly/~otto.stegmaier).  You can follow Otto on Twitter [@otto_stegmaier](https://twitter.com/otto_stegmaier?lang=en) or [Github](https://github.com/ostegm) "
    ]
   },
   {
