--- a/_posts/user_guide_python/bezier.ipynb
+++ b/_posts/user_guide_python/bezier.ipynb
@@ -11,7 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###The de  Casteljau algorithm for computing   points on a triangular B&eacute;zier patch###"
+    "#### ABOUT THE AUTHOR:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook was contributed by [Plotly user Emilia Petrisor](https://plot.ly/~empet).  You can follow Emilia on Twitter [@mathinpython](https://twitter.com/mathinpython) or [Github](https://github.com/empet). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The de  Casteljau algorithm for computing   points on a triangular B&eacute;zier patch###"
    ]
   },
   {
@@ -1447,7 +1461,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+      "\u001b[33mYou are using pip version 7.0.3, however version 7.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "\u001b[33mDEPRECATION: --download-cache has been deprecated and will be removed in the future. Pip now automatically uses and configures its cache.\u001b[0m\n",
+      "Requirement already up-to-date: publisher in /Users/nedaamin/Repos/venv27/lib/python2.7/site-packages\n"
      ]
     },
     {
