--- a/_posts/user_guide_python/xlwings.ipynb
+++ b/_posts/user_guide_python/xlwings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Online Dashboards with Excel, Python, & Plotly"
+    "# Online Dashboards with Excel, Python & Plotly"
    ]
   },
   {
