updated url's and title correction

--- a/_posts/user_guide_python/xlwings.ipynb
+++ b/_posts/user_guide_python/xlwings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Online Dashboards with Excel, Python & Plotly"
+    "# Online Dashboards with Excel, <br /> Python & Plotly"
    ]
   },
   {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -871,7 +871,7 @@
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"https://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
     "import publisher\n",
-    "publisher.publish('xlwings', '/ipython-notebook/xlwings', \n",
+    "publisher.publish('xlwings', '/ipython-notebooks/xlwings/', \n",
     "                  'Building Interactive Graphs Using Plotly and xlwings', \n",
     "                  'Online Dashboards with Excel, Python, & Plotly')"
    ]
