updated url and title correction

--- a/_posts/user_guide_python/meeg-and-eeg.ipynb
+++ b/_posts/user_guide_python/meeg-and-eeg.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Processing EEG and MEG data in Python using mne-python\n",
+    "Processing EEG and MEG Data in Python <br /> Using mne-python and Plotly\n",
     "=============================\n",
     "\n",
     "#### Authors:\n",
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1579,10 +1579,19 @@
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"https://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
     "import publisher\n",
-    "publisher.publish('meeg-and-eeg', '/ipython-notebook/meeg-and-eeg-data-analysis/', \n",
+    "publisher.publish('meeg-and-eeg', '/ipython-notebooks/meeg-and-eeg-data-analysis/', \n",
     "                  'Processing EEG and MEG data in Python using mne-python and Plotly', \n",
     "                  'How to process EEG and MEG data using mne-python and Plotly')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
